# Media_Transcoder

./: .gitignore  CMakeLists.txt  New Microsoft Word Document.docx  README.md  SOFTWARE DESIGN.docx  imgui.ini
src/: main.cpp
src/Core/: ConversionManager.cpp  ConversionManager.h  IMediaConverter.h  MP4toMP3Converter.cpp  MP4toMP3Converter.h
src/GUI/: MainWindow.cpp  MainWindow.h
